# dawnofmidnight.github.io

./: .gitignore  2024-in-books.html  2024-in-books.ray  Cargo.toml  README.md  default.nix  flake.nix  index.html  result  rustfmt.toml  site.webmanifest  style.css
.cargo/: config.toml
.github/workflows/: check.yml  ci.yml  deploy.yml
.well-known/: discord
archive/: stack-heap-types-rust.rev
content/: 2024-in-books.dj  index.dj
crates/reverie/: Cargo.toml
crates/reverie/src/: error.rs  generator.rs  lib.rs  parser.rs
crates/reverie/tests/: test.rs
crates/reverie/tests/snapshots/: test__simple.snap
crates/server/: Cargo.toml  styles.css
crates/server/src/: build.rs  db.rs  load.rs  main.rs  store.rs  thought.rs
generator/: Cargo.toml
generator/src/: main.rs  template.html
src/: index.typ
static/: index.html  site.webmanifest  style.css
static/.well-known/: discord
static/styles/: font.css
styles/: index.css
