[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.2", features = ["derive"] }
maud = "0.25.0"
reverie = { path = "../reverie" }
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }

